Last commit message

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>👋 Xin chào!</h2>
         <p>Mình là sinh viên đang theo học ngành <b>Mạng máy tính và Truyền thông Dữ liệu</b> khóa 2024 tại
             <b>Trường Đại học Công nghệ Thông tin</b>.
-            Mình đang định hướng theo học an ninh mạng hoặc là phát triển web3 nên đang tìm hiểu thử cả.
+            Mình đang định hướng theo học an ninh mạng hoặc là phát triển web3 nên đang tìm hiểu thử cả hai.
         </p>
     </section>
 
