Last commit message

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ngô Đình Khôi - Portfolio</title>
+
     <link rel="stylesheet" href="style.css">
+
+    <!-- ...existing code... -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- Icon trang web -->
+    <link rel="icon" type="image/png" href="portfolio_image/icon_web.jpg">
 </head>
 
 <body>
@@ -27,7 +34,7 @@
         <h2>👋 Xin chào!</h2>
         <p>Mình là sinh viên đang theo học ngành <b>Mạng máy tính và Truyền thông Dữ liệu</b> khóa 2024 tại
             <b>Trường Đại học Công nghệ Thông tin</b>.
-            Mình đang định hướng theo học an ninh mạng hoặc là phát triển web3 nên đang tìm hiểu thử cả hai.
+            Mình có định hướng theo học an ninh mạng hoặc là phát triển web3 nên là đang tìm hiểu thử cả hai.
         </p>
     </section>
 
@@ -38,7 +45,6 @@
             <li>C++ cơ bản</li>
             <li>HTML / CSS cơ bản </li>
             <li>Git & GitHub cơ bản</li>
-            <li>Tiếng anh chưa thi</li>
         </ul>
     </section>
 
@@ -55,10 +61,20 @@
     <!-- Liên hệ -->
     <section id="contact">
         <h2>📬 Liên hệ</h2>
-        <p>Email: <a href="mailto:khoi123719@gmail.com">Khoi123719@gmail.com</a></p>
-        <p>GitHub: <a href="https://github.com/NgoDKhoi" target="_blank">NgoDKhoi</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/kh%C3%B4i-ng%C3%B4-737259336/" target="_blank">Khôi Ngô</a>
+        <p>
+            <img src="portfolio_image/my_email_image.jpg" alt="Email" style="height:24px; vertical-align:middle;">
+            <a href="mailto:khoi123719@gmail.com" style="vertical-align:middle;">khoi123719@gmail.com</a>
         </p>
+        <p>
+            <img src="portfolio_image/github_logo.jpg" alt="GitHub" style="height:24px; vertical-align:middle;">
+            <a href="https://github.com/NgoDKhoi" target="_blank" style="vertical-align:middle;">NgoDKhoi</a>
+        </p>
+        <p>
+            <img src="portfolio_image/linkedin_logo.jpg" alt="LinkedIn" style="height:24px; vertical-align:middle;">
+            <a href="https://www.linkedin.com/in/kh%C3%B4i-ng%C3%B4-737259336/" target="_blank"
+                style="vertical-align:middle;">Khôi Ngô</a>
+        </p>
+
     </section>
 
     <footer>
