--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col-reverse md:flex-row items-center">
             <div class="w-full md:w-1/2 pr-0 md:pr-10 text-center md:text-left mt-10 md:mt-0">
-                <p class="text-primary font-mono mb-3 tracking-wide">Hello world, tôi là</p>
+                <p class="text-primary font-mono mb-3 tracking-wide">Hello world, I'm</p>
                 <h1 class="text-5xl md:text-6xl font-bold text-white mb-4 tracking-tight">
-                    Ngô Đình Khôi
+                    Ngo Dinh Khoi`
                 </h1>
                 <!-- Subtitle  -->
                 <h2 class="text-2xl md:text-3xl font-semibold mb-6 text-slate-400">
