--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi" class="scroll-smooth">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -95,8 +94,8 @@
                 </h2>
                 <!-- Cập nhật Mô tả theo file mới -->
                 <p class="text-lg text-slate-400 mb-8 leading-relaxed">
-                    Một sinh viên với định hướng trở thành Game Developer, luôn mong muốn phát triển kỹ năng và tạo ra
-                    những sản phẩm game sáng tạo.
+                    Một sinh viên năm 2với đam mê trở thành Game Developer, có kinh nghiệm thực tế với Unity và C# thông
+                    qua các dự án cá nhân.
                 </p>
                 <div class="flex justify-center md:justify-start space-x-4">
                     <a href="#projects"
@@ -123,7 +122,8 @@
                     </div>
                     <div
                         class="absolute inset-0 rounded-full overflow-hidden border-4 border-primary/50 shadow-2xl shadow-primary/20 glow-effect">
-                        <img src="portfolio_image/avatar.png" alt="Ngô Đình Khôi" class="w-full h-full object-cover">
+                        <img src="portfolio_image/z7314043202132_eb5027c3a5ba8e72147ab4e97f093412.jpg"
+                            alt="Ngô Đình Khôi" class="w-full h-full object-cover">
                     </div>
                     <!-- Tech badges floating -->
                     <div
@@ -153,7 +153,8 @@
                 thành một <strong>Game Developer</strong> chuyên nghiệp. Ngoài việc học tập, tôi còn là một người đam mê
                 điện ảnh, với tôi việc coi phim không chỉ đơn thuần là để giải trí mà còn là nguồn cảm hứng giúp tôi tư
                 duy
-                về World-building và Storytelling, từ đó tạo ra nhiều trải nghiệm thú vị cho Gameplay
+                về World-building và Storytelling, từ đó tạo ra nhiều trải nghiệm thú vị cho Gameplay. Và thêm nữa là
+                tôi cũng hay tham gia các hoạt động của trường để phát triển kỹ năng mềm của bản thân.
             </p>
             <!-- Thêm Badge cho about section -->
             <div class="flex flex-wrap justify-center gap-4">
@@ -176,7 +177,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl font-bold text-white">Kỹ Năng Chuyên Môn</h2>
-                <p class="text-slate-400 mt-4">Bộ công cụ tôi sử dụng để xây dựng thế giới ảo</p>
+                <p class="text-slate-400 mt-4">Bộ công cụ tôi sử dụng để xây dựng lên dự án</p>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -211,8 +212,7 @@
                                 class="fas fa-check-circle text-primary text-sm mr-3"></i> SQL Server</li>
                         <li class="flex items-center text-slate-300"><i
                                 class="fas fa-check-circle text-primary text-sm mr-3"></i> Firebase (Realtime)</li>
-                        <li class="flex items-center text-slate-300"><i
-                                class="fas fa-check-circle text-primary text-sm mr-3"></i> SQL</li>
+
                     </ul>
                 </div>
 
@@ -228,9 +228,9 @@
                         <li class="flex items-center text-slate-300"><i
                                 class="fas fa-check-circle text-primary text-sm mr-3"></i> Git & GitHub</li>
                         <li class="flex items-center text-slate-300"><i
-                                class="fas fa-check-circle text-primary text-sm mr-3"></i> Network Computer (Basic)</li>
-                        <li class="flex items-center text-slate-300"><i
                                 class="fas fa-check-circle text-primary text-sm mr-3"></i> Unity Engine</li>
+                        <li class="flex items-center text-slate-300"><i
+                                class="fas fa-check-circle text-primary text-sm mr-3"></i> Network Computer (Basic)</li>
                         <li class="flex items-center text-slate-300"><i
                                 class="fas fa-check-circle text-primary text-sm mr-3"></i> Windows Forms</li>
                     </ul>
@@ -268,7 +268,7 @@
                             Game </span>
                         <span
                             class="px-3 py-1 bg-slate-700 text-slate-300 text-xs font-bold rounded uppercase tracking-wider">
-                            Đồ án môn học NT106 </span>
+                            Đồ án môn học NT106 nhóm 4 người </span>
                     </div>
 
                     <h3 class="text-3xl font-bold text-white mb-4 group-hover:text-primary transition">Exploding Kittens
