Sửa 1 xíu ở portfolio

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p class="text-lg text-slate-400 mb-8 leading-relaxed">
                     Một sinh viên năm 2 với đam mê trở thành Game Developer, có kinh nghiệm thực tế với Unity và C#
                     thông
-                    qua các dự án cá nhân.
+                    qua các dự án cá nhân và làm việc nhóm.
                 </p>
                 <div class="flex justify-center md:justify-start space-x-4">
                     <a href="#projects"
