--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </h2>
                 <!-- Mô tả -->
                 <p class="text-lg text-slate-400 mb-8 leading-relaxed">
-                    Một sinh viên năm 2 với đam mê trở thành Game Developer, có kinh nghiệm thực tế với Unity và C#
+                    Một sinh viên với đam mê trở thành Game Developer, có kinh nghiệm thực tế với Unity và C#
                     thông
                     qua các dự án cá nhân và làm việc nhóm.
                 </p>
@@ -392,7 +392,7 @@
                         </div>
 
                         <div class="flex space-x-4">
-                            <a href="#"
+                            <a href="https://github.com/NgoDKhoi/Meo_Boom/blob/main/README.md"
                                 class="flex-1 text-center px-6 py-3 bg-primary hover:bg-primaryHover text-white rounded-lg transition font-medium shadow-lg shadow-primary/20">
                                 <i class="fas fa-play mr-2"></i> Demo
                             </a>
