Update: README.md

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p class="text-lg text-slate-400 mb-8 leading-relaxed">
                     Một sinh viên với đam mê trở thành Game Developer, có kinh nghiệm thực tế với Unity và C#
                     thông
-                    qua các dự án cá nhân và làm việc nhóm.
+                    qua các dự án cá nhân và làm việc nhóm trên môi trường đại học.
                 </p>
                 <div class="flex justify-center md:justify-start space-x-4">
                     <a href="#projects"
@@ -107,10 +107,10 @@
                         class="border border-slate-600 hover:border-primary hover:text-primary text-slate-400 px-4 py-3 text-2xl rounded-lg transition">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://facebook.com/ngo.d.khoi.2024" target="_blank"
+                    <!-- <a href="https://facebook.com/ngo.d.khoi.2024" target="_blank"
                         class="border border-slate-600 hover:border-[#1877f2] hover:text-[#1877f2] text-slate-400 px-4 py-3 text-2xl rounded-lg transition">
                         <i class="fab fa-facebook"></i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
 
